.k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-api-deployment
  labels:
    app: java-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-api
  template:
    metadata:
      name: java-api-template
      labels:
        app: java-api
    spec:
      containers:
        - name: java-api-app
          image: java-api-samp/java:v1.0
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: 512Mi
            limits:
              memory: 1024Mi
              cpu: 250m
          ports:
            - name: api-port
              protocol: TCP
              containerPort: 8080
